examples/bad/ERROR_AMBIGUOUS_PANIC_TYPE/panic_inside_lambda.st
language core;
extend with #panic;

fn main(n : Nat) -> Nat {
  return (fn(x : Nat) {
    	return panic!
  }) (0)
}

//ERROR_AMBIGUOUS_PANIC_TYPE
